Fix search toolbar wrapping and sizing when having few results

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/search.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/search.scss
@@ -41,6 +41,7 @@
     }
     .page-number {
         align-self: center;
+        white-space: nowrap;
     }
     .search-td-nowrap {
         white-space: nowrap;
@@ -49,7 +50,7 @@
         display: flex;
         flex-direction: row;
         margin-bottom: 5px;
-        white-space: nowrap;
+        flex-wrap: wrap;
     }
     .search-pagination {
         margin-bottom: 5px;
